--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,4 @@ AI_RETRY_DELAY_SECONDS=2
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o-mini
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
+CORS_ALLOW_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
