--- a/.env.production.example
+++ b/.env.production.example
@@ -15,3 +15,4 @@ AI_RETRY_DELAY_SECONDS=2
 OPENAI_API_KEY=sk-...
 OPENAI_MODEL=gpt-4o-mini
 NEXT_PUBLIC_API_BASE_URL=https://api.example.com
+CORS_ALLOW_ORIGINS=http://localhost:3000
